--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "react-date-range-picker",
-  "private": false,
   "version": "1.0.0",
   "type": "module",
   "files": [
@@ -12,15 +11,14 @@
   "exports": {
     ".": {
       "import": "./dist/react-date-range-picker.es.js",
-      "require": "./dist/react-date-range-picker.umd.js"
+      "require": "./dist/react-date-range-picker.umd.js",
+      "types": "./dist/index.d.ts"
     },
     "./dist/style.css": "./dist/style.css"
   },
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -32,7 +30,6 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
@@ -40,5 +37,8 @@
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vite-plugin-dts": "^2.3.0"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.3.1"
   }
 }
